--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-03  Yanko Kaneti  <yaneti@declera.com>
+
+	* bg.po: Updated Bulgarian translation by Alexander Shopov.
+
 2003-01-03  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokmal) translation.
