--- a/po/bg.po
+++ b/po/bg.po
@@ -6,9 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-11-25 18:38+0200\n"
-"Last-Translator: Alexander Shopov <al_shopov@web.bg>\n"
+"POT-Creation-Date: 2003-01-03 18:24+0200\n"
+"PO-Revision-Date: 2002-12-22 21:51+0200\n"
+"Last-Translator: Alexander Shopov <al_shopov@yahoo.com>\n"
 "Language-Team: Bulgarian <dict@linux.zonebg.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,35 +17,35 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>Открий текст в документ:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "Автоматично _прехвърляй"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "Открий текст..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "Търси _цели думи"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "_Регистърът има значение"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_Следваща"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_Предишна"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -299,4 +299,4 @@ msgstr "Помощ с ГНОМ"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "/_Помощ"
+msgstr "Помощ"
