--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-04  Gustavo Noronha Silva  <kov@debian.org>
+
+	* pt_BR.po: updated translation.
+
 2003-01-03  Yanko Kaneti  <yaneti@declera.com>
 
 	* bg.po: Updated Bulgarian translation by Alexander Shopov.
