--- a/po/sk.po
+++ b/po/sk.po
@@ -2,53 +2,53 @@
 # Slovak translation of sk.po
 # translation of @PACKAGE.po to @LANGUAGE
 # yelp Slovak translation.
-# Copyright (C) 2001,2002 Free Software Foundation, Inc.
-# Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>, 2001,2002.
+# Copyright (C) 2001,2002,2003 Free Software Foundation, Inc.
+# Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>, 2001,2002,2003.
 # Stanislav Višňovský <visnovsky@nenya.ms.mff.cuni.cz>, 2002
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: sk\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-07-03 16:50+0200\n"
-"Last-Translator: Stanislav Višňovský <visnovsky@nenya.ms.mff.cuni.cz>\n"
+"POT-Creation-Date: 2003-01-04 15:40+0100\n"
+"PO-Revision-Date: 2003-01-04 15:42+0100\n"
+"Last-Translator: Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0beta2\n"
+"X-Generator: KBabel 1.2\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>Nájsť text v dokumente:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "Automaticky na _konci zalomiť"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "Nájsť text..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "_Celé slová"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "_Rozlišovať veľkosť písmen"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_Nasledujúci"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_Predchádzajúci"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -145,9 +145,8 @@ msgid "Section"
 msgstr "Kapitola"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "Hľadať:"
+msgstr "_Hľadať:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -208,15 +207,15 @@ msgstr "/Súbor/_Zavrieť okno"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/_Upraviť"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/Upraviť/_Nájsť v stránke..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/Upraviť/Hľadať ďalej"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
@@ -305,51 +304,3 @@ msgstr "Zobraziť Pomocníka pre GNOME"
 msgid "Help"
 msgstr "Pomocník"
 
-#~ msgid ""
-#~ "Error while parsing the stylesheet, make sure you have your docbook "
-#~ "environment setup correctly."
-#~ msgstr ""
-#~ "Chyba pri spracovaní štýlu. Overte, že máte správne nastavené prostredie "
-#~ "DocBook."
-
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "Nepodarilo sa spracovať dokument '%s'."
-
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "Chyba pri použití štýlu."
-
-#~ msgid "info"
-#~ msgstr "info"
-
-#~ msgid "man"
-#~ msgstr "man"
-
-#~ msgid "Installed documents"
-#~ msgstr "Inštalované dokumenty"
-
-#~ msgid "Start page"
-#~ msgstr "Štartovacia stránka"
-
-#~ msgid "Scrollkeeper docs for category"
-#~ msgstr "Dokumenty Scrollkeeper pre kategóriu"
-
-#~ msgid "/File/_Quit"
-#~ msgstr "/Súbor/_Koniec"
-
-#~ msgid "Manual page sections"
-#~ msgstr "Sekcie manuálových stránok"
-
-#~ msgid "Go back in the history list"
-#~ msgstr "Prejsť dozadu v histórii"
-
-#~ msgid "Go forth in the history list"
-#~ msgstr "Prejsť dopredu v histórii"
-
-#~ msgid "Overview of contents"
-#~ msgstr "Prehľad obsahu"
-
-#~ msgid "Search for a phrase in the document"
-#~ msgstr "Hľadať frázu v dokumente"
-
-#~ msgid "Enter phrase to search for in all documents"
-#~ msgstr "Zadajte frázu, ktorú chcete nájsť vo všetkých dokumentoch"
