2003-01-05 updated ja.po. T.Aihana <aihana@gnome.gr.jp>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-05  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2003-01-04  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation.
@@ -486,7 +490,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  TÃµivo LeedjÃ¤rv  <toivo@linux.ee>
+2002-04-11  T-AÃ$)Bµivo Leedj-AÃ$)B¤rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -547,7 +551,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  TÃµivo LeedjÃ¤rv <toivo@linux.ee>
+2002-03-17  T-AÃ$)Bµivo Leedj-AÃ$)B¤rv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -567,10 +571,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  GermÃ¡n Poo-CaamaÃ±o <gpoo@ubiobio.cl>
+2002-03-06  Germ-AÃ$)B¡n Poo-Caama-AÃ$)B±o <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
-		Juan Manuel GarcÃ­a Molina <juanma_gm@wanadoo.es>
+		Juan Manuel Garc-AÃ$)B­a Molina <juanma_gm@wanadoo.es>
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -592,7 +596,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¥l) translation.
+	* no.po: Updated Norwegian (bokm-AÃ$)B¥l) translation.
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -626,7 +630,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  TÃµivo LeedjÃ¤rv  <leedjarv@interest.ee>
+2002-03-01  T-AÃ$)Bµivo Leedj-AÃ$)B¤rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -643,7 +647,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  TÃµivo LeedjÃ¤rv  <leedjarv@interest.ee>
+2002-02-28  T-AÃ$)Bµivo Leedj-AÃ$)B¤rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -674,7 +678,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by GÃ¶rkem.
+	* tr.po: Committed updated Turkish translation by G-AÃ$)B¶rkem.
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -689,7 +693,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  TÃµivo LeedjÃ¤rv  <leedjarv@interest.ee>
+2002-02-17  T-AÃ$)Bµivo Leedj-AÃ$)B¤rv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
 
@@ -707,19 +711,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¥l) translation.
+	* no.po: Updated Norwegian (bokm-AÃ$)B¥l) translation.
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¥l) translation.
+	* no.po: Updated Norwegian (bokm-AÃ$)B¥l) translation.
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos PerellÃ³ MarÃ­n <carlos@gnome-db.org>
+2002-02-04  Carlos Perell-AÃ$)B³ Mar-AÃ$)B­n <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel GarcÃ­a Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc-AÃ$)B­a Molina <juanma_gm@wanadoo.es>
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -741,7 +745,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¥l) translation.
+	* no.po: Updated Norwegian (bokm-AÃ$)B¥l) translation.
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -767,7 +771,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¥l) translation.
+	* no.po: Updated Norwegian (bokm-AÃ$)B¥l) translation.
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -804,7 +808,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¥l) translation.
+	* no.po: Updated Norwegian (bokm-AÃ$)B¥l) translation.
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -831,9 +835,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by GÃ¶rkem Cetin.
+	* tr.po: Added Turkish translation by G-AÃ$)B¶rkem Cetin.
 
-2002-01-06  GermÃ¡n Poo-CaamaÃ±o <gpoo@ubiobio.cl>
+2002-01-06  Germ-AÃ$)B¡n Poo-Caama-AÃ$)B±o <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
 
@@ -851,7 +855,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¥l) translation.
+	* no.po: Updated Norwegian (bokm-AÃ$)B¥l) translation.
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -867,7 +871,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokmÃ¥l) translation.
+	* no.po: Added Norwegian (bokm-AÃ$)B¥l) translation.
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -906,7 +910,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos PerellÃ³ MarÃ­n <carlos@gnome-db.org>
+2001-12-04  Carlos Perell-AÃ$)B³ Mar-AÃ$)B­n <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
 
