--- a/po/ja.po
+++ b/po/ja.po
@@ -1,13 +1,13 @@
 # Yelp ja.po.
-# Copyright (C) 2002 Free Software Foundation, Inc.
+# Copyright (C) 2002-2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Yelp package.
-# Takeshi Aihana <aihana@gnome.gr.jp>, 2002.
+# Takeshi Aihana <aihana@gnome.gr.jp>, 2002-2003.
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp Ver0.6.99\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-04-22 23:50+0900\n"
+"Project-Id-Version: yelp Ver2.1.3\n"
+"POT-Creation-Date: 2003-01-05 02:24+0900\n"
+"PO-Revision-Date: 2003-01-05 02:19+0900\n"
 "Last-Translator: Takeshi Aihana <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -16,35 +16,35 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>検索するドキュメント中の文字列:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "自動的にワードラップする(_W)"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "文字列の検索..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "文字列全体に一致するもの(_E)"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "大小文字に一致するもの(_M)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "次へ(_N)"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "前へ(_P)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -141,9 +141,8 @@ msgid "Section"
 msgstr "セクション"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "検索する文字列:"
+msgstr "検索する文字列(_S):"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -163,7 +162,6 @@ msgid "Manual Pages"
 msgstr "マニュアル・ページ"
 
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
-#, fuzzy
 msgid "Info Pages"
 msgstr "Info ページ"
 
@@ -180,17 +178,16 @@ msgid "Manual pages"
 msgstr "マニュアル・ページ"
 
 #: src/yelp-view-toc.c:712
-#, fuzzy
 msgid "GNOME is"
-msgstr "GNOME - デスクトップ"
+msgstr "GNOME は"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr ""
+msgstr "フリーソフトウェアです"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr ""
+msgstr "(C)"
 
 #: src/yelp-window.c:163
 msgid "/_File"
@@ -206,15 +203,15 @@ msgstr "/ファイル(_F)/閉じる(_C)"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/編集(_E)"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/編集(_E)/文字列の検索(_F)..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/編集(_E)/再検索(_F)"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
@@ -293,7 +290,7 @@ msgstr "目次"
 
 #: src/yelp-window.c:826
 msgid "Search in the index"
-msgstr "目次を検索します"
+msgstr "目次の中から検索します"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -302,22 +299,3 @@ msgstr "GNOME 2.0 向けヘルプ・ブラウザ"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "GNOME ヘルプ・システム"
-
-#~ msgid ""
-#~ "Error while parsing the stylesheet, make sure you have your docbook "
-#~ "environment setup correctly."
-#~ msgstr ""
-#~ "スタイルシートの解析中にエラーが発生しました。dockbook 環境設定が正しいか"
-#~ "確認して下さい。"
-
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "ドキュメント '%s' を解析できませんでした。"
-
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "スタイルシートの適用中にエラーが発生しました。"
-
-#~ msgid "info"
-#~ msgstr "情報"
-
-#~ msgid "man"
-#~ msgstr "man"
