--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-05  Kostas Papadimas <pkst@gmx.net>
+
+	* el.po: Updated Greek translation.
+
 2003-01-05  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
