--- a/po/el.po
+++ b/po/el.po
@@ -1,49 +1,53 @@
 # Greek translation of yelp.
-# Copyright (C) 2002 Free Software Foundation, Inc.
-# Simos Xenitellis <simos@hellug.gr>, 2002.
-# 
+# Copyright (C) 2003 Free Software Foundation, Inc.
+# Simos Xenitellis <simos@hellug.gr>, 2002,2003
+#
+# 59 messages, 19Aug2002, started logging.
+# kostas:70 messages, 05Jan2003, updated translation for Gnome 2..1x
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 1.0\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-03-01 15:57+0000\n"
-"Last-Translator: Simos Xenitellis <simos@hellug.gr>\n"
+"Project-Id-Version: yelp 1.0.3\n"
+"POT-Creation-Date: 2003-01-05 11:49+0200\n"
+"PO-Revision-Date: 2003-01-05 11:48+0200\n"
+"Last-Translator: Kostas Papadimas <pkst@gmx.net>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.9.6\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>Εύρεση κειμένου στο έγγραφο:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "Αυτόματη αναδίπλ_ωση γύρω"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "Εύρεση κειμένου..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "Ταίριασμα _ολόκληρης λέξης"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "_Ταίριασμα εκθέτη/δείκτη"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_Επόμενο"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_Προηγούμενο"
 
 #
 #: src/GNOME_Yelp.server.in.h:1
@@ -135,7 +139,7 @@ msgstr "Διαχείριση Συστήματος"
 
 #: src/yelp-view-content.c:502 src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr ""
+msgstr "Φορτώνεται..."
 
 #
 #: src/yelp-view-content.c:543 src/yelp-view-index.c:517
@@ -143,43 +147,38 @@ msgid "Section"
 msgstr "Ενότητα"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "Αναζήτηση για:"
+msgstr "Ανα_ζήτηση για:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
-#, fuzzy
 msgid "Help Contents"
-msgstr "Βοήθεια πάνω σε "
+msgstr "Περιεχόμενα Βοήθειας"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr ""
+msgstr "GNOME - Επιφάνεια εργασίας"
 
 #: src/yelp-view-toc.c:167
-#, fuzzy
 msgid "Additional documents"
-msgstr "Εγκατεστημένα έγγραφα"
+msgstr "Επιπλέον έγγραφα"
 
 #: src/yelp-view-toc.c:168 src/yelp-view-toc.c:493
 msgid "Manual Pages"
 msgstr "Σελίδες Τεκμηρίωσης"
 
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
-#, fuzzy
 msgid "Info Pages"
 msgstr "Σελίδες info"
 
 #
 #: src/yelp-view-toc.c:366 src/yelp-view-toc.c:550 src/yelp-view-toc.c:749
-#, fuzzy
 msgid "Documents"
-msgstr "Άλλα Έγγραφα"
+msgstr "Έγγραφα"
 
 #: src/yelp-view-toc.c:367 src/yelp-view-toc.c:494 src/yelp-view-toc.c:750
 msgid "Categories"
-msgstr ""
+msgstr "Κατηγορίες"
 
 #: src/yelp-view-toc.c:448
 msgid "Manual pages"
@@ -187,15 +186,15 @@ msgstr "Σελίδες τεκμηρίωσης"
 
 #: src/yelp-view-toc.c:712
 msgid "GNOME is"
-msgstr ""
+msgstr "Το GNOME είναι"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr ""
+msgstr "Ελεύθερο Λογισμικό"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr ""
+msgstr "(C)"
 
 #: src/yelp-window.c:163
 msgid "/_File"
@@ -211,15 +210,15 @@ msgstr "/Αρχείο/Κ_λείσιμο παραθύρου"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/_Επεξεργασία"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/Επεξεργασία/Εύ_ρεση στη σελίδα..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/Επεξεργασία/Εύ_ρεση ξανά"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
@@ -239,7 +238,7 @@ msgstr "/Πήγαινε/_Αρχή"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
-msgstr "/Πήγαινε/_Περι"
+msgstr "/Μετάβαση/_Περί"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
@@ -256,7 +255,7 @@ msgstr "Πρόγραμμα Βοήθειας"
 #: src/yelp-window.c:351
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr ""
+msgstr "Το έγγραφο '%s' δεν υπάρχει"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
