--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 2.1.4:
+-----------------
+
+* Updated translations 
+  (am, bg, ca, el, es, ja, lv, no, pl, pt_BR, sk, wa)
+
 Changes in 2.1.3:
 -----------------
 
