--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-01-06  Richard Hult  <rhult@codefactory.se>
+
+	* Release 2.1.4.
+
+	* NEWS: Updated for 2.1.4.
+
+	* configure.in: Bumped to 2.1.4.
+
 2002-12-16  Richard Hult  <rhult@codefactory.se>
 
 	* Release 2.1.3
