--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-07  Daniel Yacob  <locales@geez.org>
+
+	* am.po: Updated Amharic translations.
+
 2002-01-07  Naba Kumar  <naba@gnome.org>
 
 	* hi.po: New hindi translation by
