--- a/po/ko.po
+++ b/po/ko.po
@@ -4,47 +4,46 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 0.6\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-07-09 09:28GMT+10:00\n"
-"Last-Translator: Michelle Kim <mkim@brisbane.redhat.com>\n"
-"Language-Team: Korean <ko@li.org>\n"
+"Project-Id-Version: yelp 2.1.3\n"
+"POT-Creation-Date: 2003-01-05 17:43+0900\n"
+"PO-Revision-Date: 2003-01-05 17:46+0900\n"
+"Last-Translator: Young-Ho, Cha <ganadist@mizi.com>\n"
+"Language-Team: GTP Korean <gnome-kr-translation@gnome.or.kr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>문서에서 글자 찾기:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "자동 줄 넘김(_W)"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "글자 찾기..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "모든 단어 일치(_E)"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "대/소문자 일치(_M)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "다음(_N)"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "이전(_P)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -141,9 +140,8 @@ msgid "Section"
 msgstr "단락"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "찾기:"
+msgstr "찾기(_S):"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -204,15 +202,15 @@ msgstr "/파일/창 닫기(_C)"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/고치기(_E)"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/고치기/페이지에서 찾기(_F)..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/고치기/다시 찾기(_F)"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
@@ -249,13 +247,13 @@ msgstr "도움말 브라우저"
 #: src/yelp-window.c:351
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr "문서 '%s'가 없습니다"
+msgstr "문서 '%s'(이)가 없습니다"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:675
 msgid "translator_credits"
-msgstr "차영호 <ganadist@chollian.net> 2002"
+msgstr "차영호 <ganadist@mizi.com> 2002"
 
 #: src/yelp-window.c:679
 msgid "Help Browser for GNOME 2.0"
@@ -300,25 +298,3 @@ msgstr "그놈에서 도움말을 봅니다"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "도움말"
-
-#~ msgid ""
-#~ "Error while parsing the stylesheet, make sure you have your docbook "
-#~ "environment setup correctly."
-#~ msgstr ""
-#~ "스타일시트를 분석하는 도중 오류가 발생했습니다, 여러분의 docbook 환경 설정"
-#~ "이 올바른지 확인하십시오."
-
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "문서 '%s'를 분석할 수 없습니다."
-
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "스타일 시트를 적용하는 도중 오류가 났습니다."
-
-#~ msgid "Failed to open document '%s'"
-#~ msgstr "문서 '%s'를 열기 실패하였습니다"
-
-#~ msgid "info"
-#~ msgstr "정보"
-
-#~ msgid "man"
-#~ msgstr "설명서"
