--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-09  Padraig O'Briain  <padraig.obriain@sun.com>
+
+	* stylesheets/yelp-customization.xsl:
+	Add entry for body tag attributes so that the colour of the text is 
+	obtained from the GTK theme. Addresses issue raised in bug #95190.
+
 2002-01-07  Naba Kumar  <naba@gnome.org>
 
 	* configure.in: Added hi (hindi) in ALL_LINGUAS
