Hide unimplemented options in the find dialog for now.
2002-01-09  Richard Hult  <rhult@codefactory.se>

	* data/ui/yelp.glade: Hide unimplemented options in the find
	dialog for now.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-09  Richard Hult  <rhult@codefactory.se>
+
+	* data/ui/yelp.glade: Hide unimplemented options in the find
+	dialog for now.
+	
 2002-01-09  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* stylesheets/yelp-customization.xsl:
