--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-09  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+	
 2003-01-08  Kang Jeong-Hee  <Keizi@mail.co.kr>
 
 	* ko.po: Updated Korean translation by Young-Ho, Cha.
