--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-10  Fatih Demir <kabalak@gtranslator.org>
+
+	* configure.in: Added "ta" (Tamil) to the languages' list.
+
 2002-01-09  Richard Hult  <rhult@codefactory.se>
 
 	* data/ui/yelp.glade: Hide unimplemented options in the find
