--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-10  Fatih Demir <kabalak@gtranslator.org>
+
+	* ta.po: Added Tamil translation by Dinesh.
+
 2003-01-09  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
