--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-12  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2003-01-10  Fatih Demir <kabalak@gtranslator.org>
 
 	* ta.po: Added Tamil translation by Dinesh.
