--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Changes in 2.1.5:
+-----------------
+
+* Stylesheet fixes                              (Padraig O'Briain)
+* Hide unimplemented search options             (Richard Hult)
+* Updated translations 
+  (am, hi, ko, ru, sq, ta)
+
 Changes in 2.1.4:
 -----------------
 
