--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-01-13  Richard Hult  <rhult@codefactory.se>
+
+	* Release 2.1.5.
+
+	* NEWS: Update for 2.1.5.
+	
+	* configure.in: Bump version to 2.1.5.
+
 2003-01-10  Fatih Demir <kabalak@gtranslator.org>
 
 	* configure.in: Added "ta" (Tamil) to the languages' list.
