Updated Hindi translation from Bhopal team <anuragseetha@yahoo.com>
	* hi.po: Updated Hindi translation from
	Bhopal team <anuragseetha@yahoo.com>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-14  Naba Kumar <naba@gnome.org>
+
+	* hi.po: Updated Hindi translation from
+	Bhopal team <anuragseetha@yahoo.com>
+
 2003-01-12  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: updated Russian translation
