--- a/po/hi.po
+++ b/po/hi.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp 2.0 \n"
-"POT-Creation-Date: 2003-01-03 06:06+0100\n"
-"PO-Revision-Date: 2003-01-03 18:00+0530\n"
+"POT-Creation-Date: 2003-01-10 04:03+0100\n"
+"PO-Revision-Date: 2003-01-10 20:38+0530\n"
 "Last-Translator: Bhopal team <anuragseetha@yahoo.com>\n"
 "Language-Team: Gnome Hindi Team <indlinux-hindi-gnome@lists.sourceforge."
 "net>\n"
@@ -24,7 +24,7 @@ msgstr "<b>दस्तावेज मे पाठ्य ढूंडे:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "अपने आप व्रेप"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
@@ -32,11 +32,11 @@ msgstr "पाठ्य ढूंडे..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "पूरा शब्द मिलाएं (_e)"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "मिलाएं बडा/छोटा केस (_M)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
@@ -134,7 +134,7 @@ msgstr "सिस्टम प्रधान"
 
 #: src/yelp-view-content.c:502 src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr ""
+msgstr "लोड हो रहा है..."
 
 #: src/yelp-view-content.c:543 src/yelp-view-index.c:517
 msgid "Section"
@@ -142,7 +142,7 @@ msgstr "विभाग"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
-msgstr "के लिए खोज:"
+msgstr "के लिए खोज: (_S)"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -187,7 +187,7 @@ msgstr "स्वतंत्र सोफटवेर"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr ""
+msgstr "(C)"
 
 #: src/yelp-window.c:163
 msgid "/_File"
