--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-14  Gil "Dolfin" Osher <dolfin@rpg.org.il>
+
+	* he.po: Updated Hebrew translation.
+
 2003-01-14  Naba Kumar <naba@gnome.org>
 
 	* hi.po: Updated Hindi translation from
@@ -155,7 +159,7 @@
 
 2002-11-25  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¥l) translation.
+	* no.po: Updated Norwegian (bokm?¥l) translation.
 	
 2002-11-25  Yanko Kaneti  <yaneti@declera.com>
 
@@ -172,7 +176,7 @@
 
 2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¯Â¿Â½) translation.
+	* no.po: Updated Norwegian (bokm?¯???½) translation.
 	
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
@@ -190,10 +194,10 @@
 
 	* ro.po: added ( thanks to Mugurel Tudor <mugurelu@go.ro> )
 
-2002-08-27  GermÃ¯Â¿Â½ Poo Caamao <gpoo@ubiobio.cl>
+2002-08-27  Germ?¯???½ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel GarcÃ¯Â¿Â½ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc?¯???½ Molina <juanma_gm@wanadoo.es>
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
@@ -259,7 +263,7 @@
 
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¯Â¿Â½) translation.
+	* no.po: Updated Norwegian (bokm?¯???½) translation.
 	
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
@@ -270,7 +274,7 @@
 
 	* ru.po: updated Russian translation.
 
-2002-06-30  Tivo LeedjÃ¯Â¿Â½v  <toivo@linux.ee>
+2002-06-30  Tivo Leedj?¯???½v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -330,7 +334,7 @@
 
 	* ca.po: Catalan fix.
 
-2002-06-06  Tivo LeedjÃ¯Â¿Â½v  <toivo@linux.ee>
+2002-06-06  Tivo Leedj?¯???½v  <toivo@linux.ee>
 
 	* et.po: Fix.
 
@@ -338,14 +342,14 @@
 
 	* sv.po: Fix.
 
-2002-06-02  GermÃ¯Â¿Â½ Poo Caamao <gpoo@ubiobio.cl>
+2002-06-02  Germ?¯???½ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel GarcÃ¯Â¿Â½ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc?¯???½ Molina <juanma_gm@wanadoo.es>
 
-2002-06-01  Carlos Perell MarÃ¯Â¿Â½ <carlos@gnome-db.org>
+2002-06-01  Carlos Perell Mar?¯???½ <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel GarcÃ¯Â¿Â½ Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc?¯???½ Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
@@ -396,7 +400,7 @@
 
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¯Â¿Â½) translation.
+	* no.po: Updated Norwegian (bokm?¯???½) translation.
 	
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
@@ -428,10 +432,10 @@
 
 	* vi.po: Updated Vietnamese file
 
-2002-05-01  GermÃ¯Â¿Â½ Poo-Caamao  <gpoo@ubiobio.cl>
+2002-05-01  Germ?¯???½ Poo-Caamao  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
-	Juan Manuel GarcÃ¯Â¿Â½ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc?¯???½ Molina <juanma_gm@wanadoo.es>
 
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
@@ -450,13 +454,13 @@
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
 
-2002-04-26  Tivo LeedjÃ¯Â¿Â½v  <toivo@linux.ee>
+2002-04-26  Tivo Leedj?¯???½v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokmÃ¯Â¿Â½) translation.
+	* no.po: Updated Norwegian (bokm?¯???½) translation.
 	
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
@@ -526,7 +530,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  T-AÃƒ$)BÂµivo Leedj-AÃƒ$)BÂ¤rv  <toivo@linux.ee>
+2002-04-11  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -587,7 +591,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  T-AÃƒ$)BÂµivo Leedj-AÃƒ$)BÂ¤rv <toivo@linux.ee>
+2002-03-17  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -607,10 +611,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  Germ-AÃƒ$)BÂ¡n Poo-Caama-AÃƒ$)BÂ±o <gpoo@ubiobio.cl>
+2002-03-06  Germ-A?ƒ$)B??n Poo-Caama-A?ƒ$)B?±o <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
-		Juan Manuel Garc-AÃƒ$)BÂ­a Molina <juanma_gm@wanadoo.es>
+		Juan Manuel Garc-A?ƒ$)B?­a Molina <juanma_gm@wanadoo.es>
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -632,7 +636,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÃƒ$)BÂ¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -666,7 +670,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  T-AÃƒ$)BÂµivo Leedj-AÃƒ$)BÂ¤rv  <leedjarv@interest.ee>
+2002-03-01  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -683,7 +687,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  T-AÃƒ$)BÂµivo Leedj-AÃƒ$)BÂ¤rv  <leedjarv@interest.ee>
+2002-02-28  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -714,7 +718,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by G-AÃƒ$)BÂ¶rkem.
+	* tr.po: Committed updated Turkish translation by G-A?ƒ$)B?¶rkem.
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -729,7 +733,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  T-AÃƒ$)BÂµivo Leedj-AÃƒ$)BÂ¤rv  <leedjarv@interest.ee>
+2002-02-17  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
 
@@ -747,19 +751,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÃƒ$)BÂ¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÃƒ$)BÂ¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos Perell-AÃƒ$)BÂ³ Mar-AÃƒ$)BÂ­n <carlos@gnome-db.org>
+2002-02-04  Carlos Perell-A?ƒ$)B?³ Mar-A?ƒ$)B?­n <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc-AÃƒ$)BÂ­a Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc-A?ƒ$)B?­a Molina <juanma_gm@wanadoo.es>
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -781,7 +785,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÃƒ$)BÂ¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -807,7 +811,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÃƒ$)BÂ¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -844,7 +848,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÃƒ$)BÂ¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -871,9 +875,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by G-AÃƒ$)BÂ¶rkem Cetin.
+	* tr.po: Added Turkish translation by G-A?ƒ$)B?¶rkem Cetin.
 
-2002-01-06  Germ-AÃƒ$)BÂ¡n Poo-Caama-AÃƒ$)BÂ±o <gpoo@ubiobio.cl>
+2002-01-06  Germ-A?ƒ$)B??n Poo-Caama-A?ƒ$)B?±o <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
 
@@ -891,7 +895,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-AÃƒ$)BÂ¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -907,7 +911,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokm-AÃƒ$)BÂ¥l) translation.
+	* no.po: Added Norwegian (bokm-A?ƒ$)B?¥l) translation.
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -946,7 +950,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos Perell-AÃƒ$)BÂ³ Mar-AÃƒ$)BÂ­n <carlos@gnome-db.org>
+2001-12-04  Carlos Perell-A?ƒ$)B?³ Mar-A?ƒ$)B?­n <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
 
