Updating Amharic translation.

--- a/po/am.po
+++ b/po/am.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 1.0\n"
 "POT-Creation-Date: 2002-10-03 05:37+0200\n"
-"PO-Revision-Date: 2002-12-29 19:37+EDT\n"
+"PO-Revision-Date: 2003-01-14 11:02+EDT\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
 "Language-Team: Amharic <locales@geez.org>\n"
 "MIME-Version: 1.0\n"
@@ -99,7 +99,7 @@ msgstr "ማጠቃለያ"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "የአሰራሩ አስተዳደር"
+msgstr "የአሰራሩ መቆጣጠሪያ"
 
 #: src/yelp-view-content.c:422 src/yelp-view-index.c:498
 msgid "Section"
