--- a/po/vi.po
+++ b/po/vi.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.6.99\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-07-26 12:25+0700\n"
+"POT-Creation-Date: 2003-01-10 12:02+0100\n"
+"PO-Revision-Date: 2003-01-10 21:58+0700\n"
 "Last-Translator: pclouds <pclouds@gmx.net>\n"
 "Language-Team: GnomeVI <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -15,35 +15,35 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>Tìm văn bản trong tài liệu:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "Tự động _cuộn"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "Tìm chuỗi..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "Khớp toàn _bộ từ"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "_So khớp chữ hoa/thường"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_Tiếp"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "T_rước"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -140,9 +140,8 @@ msgid "Section"
 msgstr "Phần"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "Tìm:"
+msgstr "_Tìm:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -203,15 +202,15 @@ msgstr "/Tập tin/Đó_ng cửa sổ"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/_Sửa"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/Sửa/_Tìm trong trang..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/Sửa/_Tìm nữa"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
