--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added Vietnamese (vi), Arabic (ar),
+	Finnish (fi) and Macedonian (mk) to ALL_LINGUAS.
+
 2003-01-13  Richard Hult  <rhult@codefactory.se>
 
 	* Release 2.1.5.
