--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-18  Tõivo Leedjärv  <toivo@linux.ee>
+
+	* et.po: Updated Estonian translation.
+
 2003-01-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* vi.po: Updated Vietnamese file
