--- a/po/et.po
+++ b/po/et.po
@@ -1,12 +1,12 @@
 # Yelp eesti tõlge.
 # Copyright (C) 2002 Free Software Foundation, Inc.
-# Tõivo Leedjärv <toivo@linux.ee>, 2002.
+# Tõivo Leedjärv <toivo@linux.ee>, 2002, 2003.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-06-30 00:50+0300\n"
+"POT-Creation-Date: 2003-01-18 18:52+0200\n"
+"PO-Revision-Date: 2003-01-18 18:55+0200\n"
 "Last-Translator: Tõivo Leedjärv <toivo@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -15,35 +15,35 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>Otsi dokumendist teksti:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "Dokumendi lõpust _uuesti algusesse"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "Otsi teksti..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "Otsi _tervet sõna"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "T_õstutundlik"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_Järgmine"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_Eelmine"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -140,9 +140,8 @@ msgid "Section"
 msgstr "Peatükk"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "Otsi:"
+msgstr "_Otsi:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -203,15 +202,15 @@ msgstr "/Fail/_Sulge aken"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/_Redaktor"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/Redaktor/_Otsi lehelt..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/Redaktor/O_tsi uuesti"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
@@ -256,7 +255,7 @@ msgstr "Dokumenti '%s' ei ole olemas"
 msgid "translator_credits"
 msgstr ""
 "Tõlge eesti keelde:\n"
-"       Tõivo Leedjärv <toivo@linux.ee>, 2002."
+"       Tõivo Leedjärv <toivo@linux.ee>, 2002, 2003."
 
 #: src/yelp-window.c:679
 msgid "Help Browser for GNOME 2.0"
