--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-01-20  Mikael Hallendal  <micke@codefactory.se>
+
+	* Release 2.2.0
+
+	* configure.in: Bumped version to 2.2.0
+
+	* NEWS: Update for 2.2.0
+	
 2003-01-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added Vietnamese (vi), Arabic (ar),
