--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Changes in 2.2.0:
+-----------------
+
+* Updated translations
+  (hi, he, vi, de)                              (Christian Neumair,
+                                                 Pablo Saratxaga,
+                                                 Toivo,
+                                                 Gil Osher,
+                                                 Naba Kumar)
+
 Changes in 2.1.5:
 -----------------
 
