--- a/po/de.po
+++ b/po/de.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp 2.1.3\n"
-"POT-Creation-Date: 2003-01-20 16:00+0100\n"
-"PO-Revision-Date: 2003-01-20 16:00+0100\n"
+"POT-Creation-Date: 2003-01-20 22:53+0100\n"
+"PO-Revision-Date: 2003-01-20 22:53+0100\n"
 "Last-Translator: Christian Neumair <chris@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -57,7 +57,7 @@ msgstr "Yelp-Fabrik"
 #: src/yelp-main.c:117
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Yelp konnte nicht aktiviert werden: „%s”"
+msgstr "Yelp konnte nicht aktiviert werden: »%s«"
 
 #: src/yelp-main.c:136
 msgid "Could not open new window."
@@ -249,7 +249,7 @@ msgstr "Hilfe-Browser"
 #: src/yelp-window.c:351
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr "Das Dokument „%s” existiert nicht"
+msgstr "Das Dokument »%s« existiert nicht"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
@@ -257,7 +257,7 @@ msgstr "Das Dokument „%s” existiert nicht"
 msgid "translator_credits"
 msgstr ""
 "Christian Meyer <chrisime@gnome.org>\n"
-"Christian Neumair <christian-neumair@web.de>\n"
+"Christian Neumair <chris@gnome-de.org>\n"
 "Matthias Warkus <mawarkus@gnome.org>"
 
 #: src/yelp-window.c:679
