Updated Finnish translation from Lauri Nurmi et al.
2003-01-20  Pauli Virtanen  <pauli.virtanen@hut.fi>

	* fi.po: Updated Finnish translation from Lauri Nurmi et al.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-20  Pauli Virtanen  <pauli.virtanen@hut.fi>
+
+	* fi.po: Updated Finnish translation from Lauri Nurmi et al.
+
 2003-01-20  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
