--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-21  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation.
+
 2003-01-20  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: Updated Finnish translation from Lauri Nurmi et al.
