--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-22  Marius Andreiana <marius galuna.ro>
+
+	* ro.po: updated ( thanks to Mugurel Tudor )
+
 2003-01-22  He Qiangqiang  <carton@linux.net.cn>
 
         * zh_CN.po: Updated Simplified Chinese translation by
@@ -28,7 +32,7 @@
 
 	* vi.po: Updated Vietnamese file
 
-2003-01-18  TÃµivo LeedjÃ¤rv  <toivo@linux.ee>
+2003-01-18  TÃƒÂµivo LeedjÃƒâ‚¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -197,7 +201,7 @@
 
 2002-11-25  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?¥l) translation.
+	* no.po: Updated Norwegian (bokm?Â¥l) translation.
 	
 2002-11-25  Yanko Kaneti  <yaneti@declera.com>
 
@@ -214,7 +218,7 @@
 
 2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?¯???½) translation.
+	* no.po: Updated Norwegian (bokm?Â¯???Å“) translation.
 	
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
@@ -232,10 +236,10 @@
 
 	* ro.po: added ( thanks to Mugurel Tudor <mugurelu@go.ro> )
 
-2002-08-27  Germ?¯???½ Poo Caamao <gpoo@ubiobio.cl>
+2002-08-27  Germ?Â¯???Å“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc?¯???½ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc?Â¯???Å“ Molina <juanma_gm@wanadoo.es>
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
@@ -301,7 +305,7 @@
 
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?¯???½) translation.
+	* no.po: Updated Norwegian (bokm?Â¯???Å“) translation.
 	
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
@@ -312,7 +316,7 @@
 
 	* ru.po: updated Russian translation.
 
-2002-06-30  Tivo Leedj?¯???½v  <toivo@linux.ee>
+2002-06-30  Tivo Leedj?Â¯???Å“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -372,7 +376,7 @@
 
 	* ca.po: Catalan fix.
 
-2002-06-06  Tivo Leedj?¯???½v  <toivo@linux.ee>
+2002-06-06  Tivo Leedj?Â¯???Å“v  <toivo@linux.ee>
 
 	* et.po: Fix.
 
@@ -380,14 +384,14 @@
 
 	* sv.po: Fix.
 
-2002-06-02  Germ?¯???½ Poo Caamao <gpoo@ubiobio.cl>
+2002-06-02  Germ?Â¯???Å“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc?¯???½ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc?Â¯???Å“ Molina <juanma_gm@wanadoo.es>
 
-2002-06-01  Carlos Perell Mar?¯???½ <carlos@gnome-db.org>
+2002-06-01  Carlos Perell Mar?Â¯???Å“ <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc?¯???½ Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc?Â¯???Å“ Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
@@ -438,7 +442,7 @@
 
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?¯???½) translation.
+	* no.po: Updated Norwegian (bokm?Â¯???Å“) translation.
 	
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
@@ -470,10 +474,10 @@
 
 	* vi.po: Updated Vietnamese file
 
-2002-05-01  Germ?¯???½ Poo-Caamao  <gpoo@ubiobio.cl>
+2002-05-01  Germ?Â¯???Å“ Poo-Caamao  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
-	Juan Manuel Garc?¯???½ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc?Â¯???Å“ Molina <juanma_gm@wanadoo.es>
 
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
@@ -492,13 +496,13 @@
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
 
-2002-04-26  Tivo Leedj?¯???½v  <toivo@linux.ee>
+2002-04-26  Tivo Leedj?Â¯???Å“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?¯???½) translation.
+	* no.po: Updated Norwegian (bokm?Â¯???Å“) translation.
 	
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
@@ -568,7 +572,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv  <toivo@linux.ee>
+2002-04-11  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -629,7 +633,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv <toivo@linux.ee>
+2002-03-17  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -649,10 +653,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  Germ-A?ƒ$)B??n Poo-Caama-A?ƒ$)B?±o <gpoo@ubiobio.cl>
+2002-03-06  Germ-A?Âƒ$)B??n Poo-Caama-A?Âƒ$)B?Â±o <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
-		Juan Manuel Garc-A?ƒ$)B?­a Molina <juanma_gm@wanadoo.es>
+		Juan Manuel Garc-A?Âƒ$)B?Â­a Molina <juanma_gm@wanadoo.es>
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -674,7 +678,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -708,7 +712,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv  <leedjarv@interest.ee>
+2002-03-01  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -725,7 +729,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv  <leedjarv@interest.ee>
+2002-02-28  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -756,7 +760,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by G-A?ƒ$)B?¶rkem.
+	* tr.po: Committed updated Turkish translation by G-A?Âƒ$)B?Â¶rkem.
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -771,7 +775,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  T-A?ƒ$)B?µivo Leedj-A?ƒ$)B?¤rv  <leedjarv@interest.ee>
+2002-02-17  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
 
@@ -789,19 +793,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos Perell-A?ƒ$)B?³ Mar-A?ƒ$)B?­n <carlos@gnome-db.org>
+2002-02-04  Carlos Perell-A?Âƒ$)B?Â³ Mar-A?Âƒ$)B?Â­n <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc-A?ƒ$)B?­a Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc-A?Âƒ$)B?Â­a Molina <juanma_gm@wanadoo.es>
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -823,7 +827,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -849,7 +853,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -886,7 +890,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -913,9 +917,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by G-A?ƒ$)B?¶rkem Cetin.
+	* tr.po: Added Turkish translation by G-A?Âƒ$)B?Â¶rkem Cetin.
 
-2002-01-06  Germ-A?ƒ$)B??n Poo-Caama-A?ƒ$)B?±o <gpoo@ubiobio.cl>
+2002-01-06  Germ-A?Âƒ$)B??n Poo-Caama-A?Âƒ$)B?Â±o <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
 
@@ -933,7 +937,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?ƒ$)B?¥l) translation.
+	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -949,7 +953,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokm-A?ƒ$)B?¥l) translation.
+	* no.po: Added Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -988,7 +992,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos Perell-A?ƒ$)B?³ Mar-A?ƒ$)B?­n <carlos@gnome-db.org>
+2001-12-04  Carlos Perell-A?Âƒ$)B?Â³ Mar-A?Âƒ$)B?Â­n <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
 
