Fixed a couple of strings.
2003-01-23  Pablo Gonzalo del Campo <pablodc@bigfoot.com>

	* es.po: Fixed a couple of strings.

--- a/po/es.po
+++ b/po/es.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: GNOME 2.0\n"
-"POT-Creation-Date: 2002-12-17 23:12-0300\n"
-"PO-Revision-Date: 2002-12-17 23:18GMT\n"
-"Last-Translator: Germán Poo-Caamaño <gpoo@ubiobio.cl>\n"
-"Language-Team:  <traductores@es.gnome.org>\n"
+"POT-Creation-Date: 2003-01-23 20:03+0100\n"
+"PO-Revision-Date: 2003-01-23 23:42-0300\n"
+"Last-Translator: Pablo Gonzalo del Campo <pablodc@bigfoot.com>\n"
+"Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.5\n"
+"X-Generator: KBabel 0.9.6\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -57,7 +57,7 @@ msgstr "Fábrica Yelp"
 #: src/yelp-main.c:117
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "No se pudo activar Yelp: '%s'"
+msgstr "No se pudo activar Yelp: «%s»"
 
 #: src/yelp-main.c:136
 msgid "Could not open new window."
@@ -151,7 +151,7 @@ msgstr "Contenidos de la ayuda"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr "Escritorio de GNOME"
+msgstr "Escritorio GNOME"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
@@ -183,7 +183,7 @@ msgstr "GNOME es"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr "Software Libre"
+msgstr "Software libre"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
@@ -239,7 +239,7 @@ msgstr "/_Ayuda"
 
 #: src/yelp-window.c:178
 msgid "/Help/_About"
-msgstr "/Ayuda/_Acerca de ..."
+msgstr "/Ayuda/_Acerca de"
 
 #: src/yelp-window.c:238 src/yelp-window.c:438
 msgid "Help Browser"
