--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-24  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation.
+
 2003-01-23  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
 
 	* es.po: Fixed a couple of strings.
