Fixed a hotkey mistake.
2003-01-29  Pablo Gonzalo del Campo <pablodc@bigfoot.com>

	* es.po: Fixed a hotkey mistake.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-29  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
+
+	* es.po: Fixed a hotkey mistake.
+
 2003-01-24  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation.
