--- a/po/es.po
+++ b/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: GNOME 2.0\n"
-"POT-Creation-Date: 2003-01-23 20:03+0100\n"
+"POT-Creation-Date: 2003-01-29 12:17+0100\n"
 "PO-Revision-Date: 2003-01-23 23:42-0300\n"
 "Last-Translator: Pablo Gonzalo del Campo <pablodc@bigfoot.com>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
@@ -235,7 +235,7 @@ msgstr "/Ir/Indi_ce"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
-msgstr "/_Ayuda"
+msgstr "/A_yuda"
 
 #: src/yelp-window.c:178
 msgid "/Help/_About"
